# nikki

./: .boring  .gitignore  .travis.yml  Dockerfile  README  README.md  appveyor.yml  buildInDocker.hs
src/: .ghci  Base.hs  CHANGELOG  FakeFutureVersion.hs  LevelServer.hs  Main.hs  Object.hs  Paths.hs  README  README.md  Setup.hs  Utils.hs  Version.hs  accelerationTime  build-qtwrapper.sh  build.hs  cabal.config.inactive  clean.sh  compile.sh  deploy.sh  example.nl  exhaust.nl  ghci-load-testsuite.sh  greenland.nl  haddock.hs  haddock.sh  installWithCabal.sh  jump-test.nl  linuxCompile.sh  linuxDeploy.hs  linuxDeploy.sh  linuxRunInPlace.sh  maximumWalkingVelocity  nikki.cabal  package.yaml  run.sh  runInPlace.sh  runghci.sh  shake.hs  shakePackages  (+7 more)
src/Base/: Animation.hs  Application.hs  Configuration.hs  Constants.hs  Debugging.hs  Directions.hs  Events.hs  FPSState.hs  Font.hs  GameGrounds.hs  GlobalCatcher.hs  GlobalShortcuts.hs  Grounds.hs  Language.hs  LevelLoading.hs  Monad.hs  Monologue.hs  Options.hs  Paths.hs  PhysicsProfiling.hs  Pixmap.hs  Polling.hs  Prose.hs  RenderGrounds.hs  Renderable.hs  Score.hs  Sound.hs  Timer.hs  Types.hs
src/Base/Application/: GUILog.hs  Menu.hs  Music.hs  Pixmaps.hs  Sound.hs
src/Base/Configuration/: Controls.hs
src/Base/Font/: ColorVariant.hs
src/Base/Options/: Controls.hs
src/Base/Paths/: GetDataFileName.hs
src/Base/Prose/: Template.hs
src/Base/Renderable/: AskString.hs  BusyMessage.hs  CenterHorizontally.hs  Centered.hs  Common.hs  GUILog.hs  GameOSD.hs  HBox.hs  Header.hs  Layered.hs  Menu.hs  Message.hs  OpenUrl.hs  Prose.hs  Scrollable.hs  Spacer.hs  StickToBottom.hs  TextListing.hs  VBox.hs  WholeScreenPixmap.hs
src/Base/Types/: Events.hs  LevelFile.hs  LevelMetaData.hs
src/Control/Concurrent/: TickTimer.hs
src/Control/Monad/: CatchState.hs
src/Data/: Abelian.hs  Convertable.hs  Directions.hs  Indexable.hs  Initial.hs  SelectTree.hs  StrictList.hs
src/Data/Binary/: Strict.hs
src/Data/Indexable/: Range.hs
src/Distribution/: AutoUpdate.hs
src/Distribution/AutoUpdate/: CmdArgs.hs  Download.hs  LibraryPath.hs  MenuItem.hs  Paths.hs  README  Restarter.hs  VerifySignatures.hs  Zip.hs
src/Distribution/Setup/: Darwin.hs
src/Editor/: Menu.hs  Pickle.hs  Scene.hs
src/Editor/Pickle/: LevelFile.hs  LevelLoading.hs  MetaData.hs  Old1.hs  Types.hs
src/Editor/Scene/: RenderOrdering.hs  Rendering.hs  Types.hs
src/Game/: BackgroundScene.hs  MainLoop.hs  Menus.hs  Scene.hs
src/Game/Scene/: Camera.hs  OptimizeRenderPixmaps.hs
src/Graphics/: Qt.hs
src/Graphics/Qt/: CPPWrapper.hs  Colors.hs  Dimension.hs  Events.hs  PostGUI.hs  Types.hs
src/Legacy/: Old1.hs  Old2.hs
src/LevelServer/: Client.hs  Configuration.hs  Downloading.hs  Networking.hs  SendMail.hs  Server.hs  Types.hs
src/LevelServer/Client/: Exceptions.hs
src/Network/: Client.hs  Download.hs  Server.hs
src/Network/Client/: Exceptions.hs
src/Object/: Contacts.hs  Types.hs
src/Physics/: Chipmunk.hs
src/Physics/Chipmunk/: ContactRef.hs  DebugGrid.hs  StickyEdges.hs  Types.hs
src/Profiling/: FPS.hs  Physics.hs
src/Setup/: Darwin.hs
src/Sorts/: Background.hs  Battery.hs  Box.hs  DeathStones.hs  DebugObject.hs  FallingTiles.hs  Grids.hs  LowerLimit.hs  Nikki.hs  Robots.hs  Sign.hs  StoryMode.hs  Switch.hs  Terminal.hs  TestRamp.hs  Tiles.hs
src/Sorts/Nikki/: Batteries.hs  Configuration.hs  Control.hs  Dust.hs  Initialisation.hs  JumpingForces.hs  JumpingImpulse.hs  State.hs  Types.hs
src/Sorts/Robots/: Cannon.hs  Configuration.hs  Eyes.hs  Jetpack.hs  Laser.hs  MovingPlatform.hs  MovingPlatforms.hs  PathRobots.hs
src/Sorts/Tiles/: Baking.hs
src/StoryMode/: AutoUpdate.hs  Client.hs  Configuration.hs  Episode.hs  Menus.hs  Paths.hs  Purchasing.hs  Types.hs  Zip.hs
src/Text/: Logging.hs
src/Top/: Editor.hs  Game.hs  Initialisation.hs  Main.hs  Menu.hs
src/Utils/: Scripting.hs
src/application/: Configuration.hs  Constants.hs  Editor.hs  GlobalCatcher.hs  Main.hs  Object.hs  Objects.hs  Paths.hs  Strict.hs  Utils.hs  natr.cabal  nikki.cabal  run.sh
src/application/Base/: Animation.hs  Application.hs  Configuration.hs  Constants.hs  Directions.hs  Events.hs  FPSState.hs  GlobalCatcher.hs  Grounds.hs  PhysicsProfiling.hs  PickleObject.hs  Pixmap.hs  Sprited.hs  Types.hs
src/application/Data/: Color.hs  Convertable.hs  Directions.hs  Indexable.hs  Initial.hs  Menu.hs  SelectTree.hs
src/application/Editor/: Binary.hs  Conversions.hs  MainLoop.hs  Menu.hs  Scene.hs  Sprited.hs
src/application/Game/: Animation.hs  Collisions.hs  Events.hs  FPSState.hs  MainLoop.hs  Objects.hs  OptimizeChipmunks.hs  Scene.hs
src/application/Object/: Animation.hs  Box.hs  Collisions.hs  Contacts.hs  Types.hs
src/application/Objects/: Animation.hs  Box.hs  Collisions.hs  MilkMachine.hs  Nikki.hs  Robots.hs  Terminals.hs  Tiles.hs  Types.hs
src/application/Physics/: Chipmunk.hs
src/application/Sorts/: Battery.hs  Box.hs  FallingTiles.hs  Grids.hs  MilkMachine.hs  Nikki.hs  Robots.hs  Switch.hs  Terminal.hs  Tiles.hs
src/application/Top/: Application.hs  Conversions.hs  Editor.hs  (+4 more)
src/bash/: nikki.sh
src/benchmarks/: build.sh  optimizeMerge.hs  pickAnimationFrame.hs  searchGlyphs.hs
src/buildSystem/: Build.hs  CMake.hs  Cabal.hs  Main.hs  buildSystem.cabal
src/common/: Utils.hs
src/cpp/: CMakeLists.txt  FallbackContext.cpp  FallbackContext.h  GLContext.cpp  GLContext.h  MainWindow.cpp  MainWindow.h  qtwrapper.cpp  qtwrapper.h  utils.cpp  utils.h
src/level-server/: ClientTest.hs  LevelServer.hs  level-server.cabal
src/qtRendering/: qtRendering.cabal
src/rootInstall/: TODO  compileQtBindings.sh  dataFiles.hs  nikki.cabal
src/scripts/: Nothing.hs  README  Release.hs  analyzeProfilingLogs.hs  converter-0_2_20.hs  converter-0_3_3_0_90.hs  converter-addBatteryCount-0_5_0_1.hs  mkTarballs.hs  moduleGraph.sh  package.yaml  scripts.cabal  writeEmptyTemplateLevel.hs
src/snap/: start-script.sh
src/test/: TestsuiteSpec.hs  UtilsSpec.hs  slow.hs  testsuite.hs
src/testsuite/: searchCrashes.hs  testsuite.cabal  testsuite.hs
(+365 files in other folders)
