Name:           nikki
version:        0.2.17
Category:       Game
Author:         Florian Hofer, Sönke Hahn
Maintainer:     shahn@joyridelabs.de

Extra-source-files:
    LICENSE
    README
    data/LICENSE
    data/README
    data/manual/editor.txt

Build-Type:     Custom
Cabal-Version:  >= 1.8

Flag Devel
    Description: No Optimazations and no executable stripping
    Default:    False


-- Useful for declaring setup-script dependencies
-- (cabal will only resolve these automatically during "cabal install")
Executable dummy
    main-is:
        -- this is meant:
        -- Setup.hs
        -- this is compiled, because cabal-install compiles the
        -- the setup script on its own:
        scripts/Nothing.hs

    ghc-options:
        -O0

    build-depends:
        base >= 4 && < 5
        , cabal-macosx
        , process
        , filepath
        , directory
        , transformers
        , mtl
        , containers
        , safe
        , Cabal >= 1.8


Executable  nikki
    main-is:
        Distribution/AutoUpdate/Restarter.hs

    if flag(Devel)
        ghc-options:
            -O0
    else
        ghc-options:
            -O1
            -optl-s

        -Werror
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fwarn-missing-methods
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-imports
        -fno-warn-overlapping-patterns
        -fno-warn-missing-signatures

    build-depends:
        base >= 4 && < 5
        , directory
        , process
        , filepath
        , transformers
        , mtl
        , containers
        , safe
        , FindBin
    if os(linux)
        build-depends:
            -- for setting LD_LIBRARY_PATH
            unix >= 2.4.0.2

    if os(mingw32)
        ld-options:
            -- omit the console on windows. You can't use stdout without causing errors then...
            -mwindows


Executable core
    main-is:
        Main.hs
    other-modules:
        Paths_nikki

    if flag(Devel)
        ghc-options:
            -O0
    else
        ghc-options:
            -O2
            -optl-s

        -threaded
--         -eventlog
--         -prof -auto-all

        -Werror
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fwarn-missing-methods
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fno-warn-unused-imports
        -fno-warn-overlapping-patterns
        -fno-warn-missing-signatures

    build-depends:
          base >= 4 && < 5
        , binary
        , syb
        , containers
        , directory
        , filepath
        , mtl >= 2
        , process
        , Hipmunk >= 5.2.0.2
        , sfml-audio
        , safe
        , random
        , StateVar
        , transformers
        , time
        , parsec3 >= 1.0.0.0
        , FindBin
        , clocked == 0.2
        , cmdargs >= 0.6.6
        , MonadCatchIO-transformers >= 0.2.2.2
        , download-curl >= 0.1.3
        , temporary >= 1.1.1
        , bytestring >= 0.9.1.7
        , utf8-light >= 0.4
        , LibZip >= 0.2.0.1
        , uniplate >= 1.6

    if os(linux)
        extra-libraries:
            qtwrapper, QtOpenGL
        extra-lib-dirs:
            cpp/dist

    -- * windows linking :(
    if os(mingw32)
        ld-options:
            -- omit the console on windows. You can't use stdout without causing errors then...
            -mwindows
        ghc-options:
            -pgma gcc -pgmc gcc -pgml gcc -pgmwindres windres
        extra-libraries:
            qtwrapper, QtOpenGL4, QtGui4, QtCore4, stdc++
        extra-lib-dirs:
            cpp/dist/,
            C:/Qt/2010.02.1/qt/lib/

    if os(darwin)
        extra-libraries:
            qtwrapper
        extra-lib-dirs:
            cpp/dist/
        frameworks:
            QtOpenGL, QtGui, QtCore
