Name:           nikki
version:        0.4.1.2
Category:       Game
Author:         Florian Hofer, Sönke Hahn
Maintainer:     shahn@joyridelabs.de

Extra-source-files:
    LICENSE
    README
    data/LICENSE
    data/README
    data/manual/editor.txt

Build-Type:     Custom
Cabal-Version:  >= 1.8

Flag Devel
    Description: No Optimazations and no executable stripping
    Default:    False


-- Useful for declaring setup-script dependencies
-- (cabal will only resolve these automatically during "cabal install")
Executable dummy
    main-is:
        -- this is meant:
        -- Setup.hs
        -- this is compiled, because cabal-install compiles the
        -- the setup script on its own:
        scripts/Nothing.hs

    ghc-options:
        -O0

    build-depends:
        base == 4.*

    if os(darwin)
        build-depends:
            cabal-macosx == 0.2.*
            , process
            , filepath
            , directory
            , transformers
            , mtl
            , containers
            , safe
            , Cabal >= 1.8


Executable  nikki
    main-is:
        Distribution/AutoUpdate/Restarter.hs

    if flag(Devel)
        ghc-options:
            -O0
    else
        ghc-options:
            -O1
            -optl-s

    ghc-options:
        -Werror
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fwarn-missing-methods
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-imports
        -fno-warn-overlapping-patterns
        -fno-warn-missing-signatures

    if os(darwin)
        cc-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
        ld-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
            -headerpad_max_install_names

    build-depends:
        base == 4.*
        , directory
        , process
        , filepath
        , transformers
        , mtl
        , containers
        , safe
        , FindBin >= 0.0.5
    if os(linux)
        build-depends:
            -- for setting LD_LIBRARY_PATH
            unix == 2.*

    if os(mingw32)
        ld-options:
            -- omit the console on windows. You can't use stdout without causing errors then...
            -mwindows


Executable core
    main-is:
        Main.hs
    other-modules:
        Paths_nikki

    if flag(Devel)
        ghc-options:
            -O0
    else
        ghc-options:
            -O2
            -optl-s

    if impl(ghc >= 7)
       cpp-options:     -DGHC7

    ghc-options:
        -threaded
--         -eventlog
--         -prof -auto-all

        -Wwarn
        -fwarn-missing-methods
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-imports

        -fno-warn-overlapping-patterns
        -fno-warn-missing-signatures

    if os(darwin)
        cc-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
        ld-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
            -headerpad_max_install_names

    build-depends:
          base == 4.*
        , binary
        , syb
        , containers
        , directory
        , filepath
        , mtl == 2.*
        , process
        , Hipmunk >= 5.2.0.2
        , sfml-audio >= 0.2.1706.1
        , safe
        , random
        , StateVar
        , transformers
        , time
        , parsec == 3.*
        , FindBin >= 0.0.5
        , clocked == 0.4
        , cmdargs >= 0.6.6
        , MonadCatchIO-transformers >= 0.2.2.2
        , download-curl >= 0.1.3
        , temporary >= 1.1.1
        , bytestring >= 0.9.1.7
        , LibZip >= 0.2.0.1
        , uniplate >= 1.6
        , data-accessor >= 0.2.1.7
        , data-accessor-mtl >= 0.2.0.2
        , strict >= 0.3.2
        , vector >= 0.9
        , RSA == 1.*
        , aeson == 0.3.*
        , attoparsec == 0.9.*
        , network == 2.*
        , binary-communicator >= 1.0.2
        , deepseq
        , old-locale
        , text
        , template == 0.2.*
        , email-validate
        , bifunctors

    if os(linux)
        extra-libraries:
            qtwrapper, QtOpenGL, QtGui
        extra-lib-dirs:
            cpp/dist

    -- * windows linking :(
    if os(mingw32)
        ld-options:
            -- omit the console on windows. You can't use stdout without causing errors then...
            -mwindows
        ghc-options:
            -pgma gcc -pgmc gcc -pgml gcc -pgmwindres windres
        extra-libraries:
            qtwrapper, QtOpenGL4, QtGui4, QtCore4, stdc++
        extra-lib-dirs:
            cpp/dist/,
            C:/Qt/2010.02.1/qt/lib/

    if os(darwin)
        extra-libraries:
            qtwrapper
        extra-lib-dirs:
            cpp/dist/
        frameworks:
            QtOpenGL, QtGui, QtCore
