Name:           nikki-and-the-robots
version:        0.2
Author:         Florian Hofer, Sönke Hahn
Category:       Game

Build-Type:     Simple
Cabal-Version:  >= 1.6

Executable            nikki
    main-is:          Main.hs

    ghc-options:
        -O2

--        -threaded
--        -eventlog
--        -prof -auto-all

        -Werror
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fno-warn-missing-methods
--        -fwarn-unused-do-bind

--        -Wwarn
        -fno-warn-overlapping-patterns
        -fno-warn-missing-signatures
        -fno-warn-unused-imports


    hs-source-dirs: ., ../common, ../qtRendering
    build-depends:
          base >= 4
        , haskell98
        , binary
        , syb
        , containers
        , directory
        , filepath
        , mtl
        , process
        , zlib
        , Hipmunk
        , sfml-audio
        , safe

    if os(linux)
        extra-libraries:
            qtwrapper, QtOpenGL
        extra-lib-dirs:
            ../qtRendering/cpp/dist

    -- * windows linking :(
    if os(mingw32)
        ghc-options:
            -pgma gcc -pgmc gcc -pgml gcc -pgmwindres windres
        extra-libraries:
            qtwrapper, QtOpenGL4, QtGui4, QtCore4, stdc++
        extra-lib-dirs:
            ../qtRendering,
            C:/Qt/2010.02.1/qt/lib


