Name:                buildSystem
Version:             0.1
Synopsis:            build system for nikki and the robots
Homepage:            http://joyridelabs.de
License:             LGPL-3
License-file:        LICENSE
Author:              Sönke Hahn
Maintainer:          shahn@joyridelabs.de
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.6

Executable build
    main-is: Main.hs
    hs-source-dirs: .
    build-depends:
        base >= 4 && < 5,
        haskell98,
        filepath,
        directory,
        mtl,
        containers,
        safe
    ghc-options: -Werror -fwarn-unused-imports
