Name:                level-server
Version:             0.1
License:             LGPL-3
License-file:        LICENSE
Author:              Sönke Hahn
Maintainer:          shahn@joyridelabs.de
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8

Executable level-server-test-client
    Main-is: ClientTest.hs
    hs-source-dirs: ., ..
    Build-depends:
        base,
        binary >= 0.5.0.2,
        network >= 2.3.0.5,
        network-fancy >= 0.1.5,
        binary-communicator >= 1.0.1

Executable level-server
    Main-is: LevelServer.hs
    hs-source-dirs: ., ..
    Build-depends:
        base,
        network-fancy >= 0.1.5,
        binary >= 0.5.0.2,
        network >= 2.3.0.5,
        binary-communicator >= 1.0.1,
        process,
        directory,
        filepath >= 1.2.0.1,
        transformers >= 0.2.2.0,
        FindBin >= 0.0.5,
        safe >= 0.3,
        cmdargs >= 0.8
