Name:                level-server
Version:             0.1
License:             LGPL-3
License-file:        LICENSE
Author:              Sönke Hahn
Maintainer:          shahn@joyridelabs.de
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.8

Executable level-server
    Main-is: LevelServer.hs
    hs-source-dirs: ., ..
    extensions:
        ScopedTypeVariables,
        EmptyDataDecls,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleInstances,
        NamedFieldPuns,
        DeriveDataTypeable,
        PackageImports
    Build-depends:
        base,
        network-fancy >= 0.1.5,
        binary >= 0.5.0.2,
        network >= 2.3.0.5,
        binary-communicator >= 1.0.1,
        process,
        directory,
        filepath,
        transformers >= 0.2.2.0,
        FindBin >= 0.0.5,
        safe >= 0.3,
        cmdargs >= 0.8,
        time,
        old-locale,
        deepseq,
        aeson,
        attoparsec,
        bytestring,
        strict,
        data-accessor,
        containers,
        data-accessor-mtl,
        mtl
