Name:           qt-rendering
version:        0.1
Author:         Sönke Hahn
Category:       Rendering

Build-Type:     Simple
Cabal-Version:  >= 1.6

Library
    exposed-modules:
        Graphics.Qt,
        Graphics.Qt.Events,
        Graphics.Qt.CPPWrapper,
        Graphics.Qt.Types
    ghc-options:      -threaded -O1 -fwarn-missing-signatures -Werror
    ghc-prof-options: -auto-all
    build-depends:
        containers,
        haskell98,
        base,
        binary,
        directory
    extra-libraries:
        qtwrapper, QtOpenGL
    extra-lib-dirs:
        ../binaries/qtRendering/

