Name:           nikki
version:        0.4.1.2
Category:       Game
Author:         Florian Hofer, Sönke Hahn
Maintainer:     shahn@joyridelabs.de

Extra-source-files:
    LICENSE
    README
    data/LICENSE
    data/README
    data/manual/editor.txt

Build-Type:     Simple
Cabal-Version:  >= 1.8

data-files:
    LICENSE
    README

    manual/*.txt

    png/font/*.png
    png/font/digits/*.png
    png/sign/*.png
    png/nikki/*.png
    png/battery/*.png
    png/terminals/*.png
    png/terminals/osd/*.png
    png/multilayers/*.png
    png/tutorial/*.png
    png/osd/*.png
    png/osd/backgroundOverlay/*.png
    png/osd/background/*.png
    png/backgrounds/blue/*.png
    png/objects/*.png
    png/robots/train/*.png
    png/robots/patrol/*.png
    png/robots/conveyor/*.png
    png/robots/eyes/*.png
    png/robots/platform/*.png
    png/robots/cannon/*.png
    png/robots/jetpack/*.png
    png/robots/laser/*.png
    png/tiles/*.png

    sounds/game/*.wav
    sounds/menu/*.wav

    standardLevels/01-Tutorial/*.nl
    standardLevels/01-Tutorial/*.nl.meta
    standardLevels/02-QuickDemo/*.nl
    standardLevels/02-QuickDemo/*.nl.meta
    standardLevels/03-Contest1/*.nl
    standardLevels/03-Contest1/*.nl.meta
    standardLevels/03-Contest1/*.txt

    templateLevels/*.nl


data-dir:
    ../../data

Flag Devel
    Description: No Optimizations and no executable stripping
    Default:    False

Executable nikki
    main-is:
        Main.hs

    other-modules:
        Paths_nikki

    hs-source-dirs:
        ../

    if flag(Devel)
        ghc-options:
            -O0
    else
        ghc-options:
            -O2
            -optl-s

    if impl(ghc >= 7)
        cpp-options:     -DGHC7

    cpp-options: -DRootInstall

    ghc-options:
        -threaded

    if os(darwin)
        cc-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
        ld-options:
            -isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
            -headerpad_max_install_names

    build-depends:
          base == 4.*
        , binary
        , syb
        , containers
        , directory
        , filepath
        , mtl == 2.*
        , process
        , Hipmunk >= 5.2.0.6
        , sfml-audio == 0.3.1816.*
        , safe
        , random
        , StateVar
        , transformers
        , time
        , parsec == 3.*
        , FindBin >= 0.0.5
        , clocked == 0.4.1
        , cmdargs >= 0.6.6
        , MonadCatchIO-transformers >= 0.2.2.2
        , download-curl >= 0.1.3
        , temporary >= 1.1.1
        , bytestring >= 0.9.1.7
        , LibZip >= 0.2.0.1
        , uniplate >= 1.6
        , data-accessor >= 0.2.1.7
        , data-accessor-mtl >= 0.2.0.2
        , strict >= 0.3.2
        , vector >= 0.9
        , RSA == 1.*
        , aeson == 0.4.*
        , attoparsec == 0.9.*
        , network == 2.*
        , binary-communicator >= 1.0.2
        , deepseq
        , old-locale
        , text
        , template == 0.2.*
        , email-validate
        , bifunctors

    if os(linux)
        extra-libraries:
            qtwrapper, QtOpenGL, QtGui
        extra-lib-dirs:
            ../cpp/dist

    -- * windows linking :(
    if os(mingw32)
        ld-options:
            -- omit the console on windows. You can't use stdout without causing errors then...
            -mwindows
        ghc-options:
            -pgma gcc -pgmc gcc -pgml gcc -pgmwindres windres
        extra-libraries:
            qtwrapper, QtOpenGL4, QtGui4, QtCore4, stdc++
        extra-lib-dirs:
            cpp/dist/,
            C:/Qt/2010.02.1/qt/lib/

    if os(darwin)
        extra-libraries:
            qtwrapper
        extra-lib-dirs:
            cpp/dist/
        frameworks:
            QtOpenGL, QtGui, QtCore
